--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Picaton</title>
+    <link rel="icon" type="image/svg+xml" href="public/logo.svg" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
